# proyectoc__

./: .gitignore  Almacen.cpp  Almacen.h  CAlmacen.cpp  CAlmacen.h  CInstruccion.cpp  CInstruccion.h  CMakeLists.txt  COrden.cpp  COrden.h  CProducto.cpp  CProducto.h  CRobot.cpp  CRobot.h  CSlot.cpp  CSlot.h  Controlador.cpp  Controlador.h  Instruccion.cpp  Instruccion.h  MODELO--DE--CLASES.mdj  Robot.cpp  Robot.h  Slot.h  funciones.cpp  funciones.h  main.cpp  modelo de clases (1).mdj  modelo de clases.mdj  plan de trabajo (1).xlsx  prueba.txt
